# haskell-misc

treasure/: README.md  treasure.cabal
treasure/src/: Main.hs
treasure/src/Treasure/: Split.hs
treasure/test/: Test.hs
